# Taskhub

./: .dockerignore  .gitignore  AGENT_REGISTER_GUIDE.md  ARCHITECTURE.md  Cookbook.md  Dockerfile  GM  README.md  README_en.md  USAGE_GUIDE.md  USAGE_GUIDE_en.md  alembic.ini  check_system.py  cleanup_report.md  default  docker-compose.yml  outline.env  package-lock.json  package.json  pyproject.toml  requirements.txt  run_admin.bat  start_all.bat  start_all.sh  sys_prompt.md  sys_prompt_en.md  taskhub_client.py  test_context.py  test_env_agent.py  test_integration.py  test_outline_client.py  test_stdio.py
alembic/versions/: 202508062348_create_initial_database_schema.py  202508062355_add_status_to_knowledge_items.py  202508070001_add_status_to_knowledge_items.py  202508070002_modify_knowledge_items_for_outline.py  202508070003_remove_knowledge_tables.py  202508070004_remove_domains_table.py  626ff7317b96_merge_heads.py
configs/: config.json  logging.json
data/: reports.db  taskhub_active.json  taskhub_archive.db  tasks.db
docs/: ARCHITECTURE.md  REQUEST_LOGGING.md  Taskhub Guide.md  architecture.md  knowledge_base_integration.md  knowledge_index.json  mcp_best_practices.md  mcp_learning_guide.md  mcp_learning_path.md  mcp_practical_tutorial.md  outline_api_knowledge.md  outline_integration_examples.md  sys_prompt.md  sys_prompt_en.md  技术交底书.md
examples/: README.md  python_client_demo.py
scripts/: launch.py  run_dev.bat  run_dev.sh  run_sse.bat  run_stdio.bat
src/: admin_server.py  api_server.js  api_server.py  database.js  init_full_db.py  init_scheduler_db.py  scheduler.js  server.py  tools.js  web_server.py
src/configs/: config.json
src/models/: agent.py  report.py  task.py
src/static/css/: admin.css  styles.css
src/static/js/: admin.js
src/storage/: json_store.py  sqlite_store.py
src/taskhub/: Taskhub_Guide.md  __init__.py  __main__.py  api.py  api_server.py  cli.py  config.py  context.py  mcp_server.py  server.py
src/taskhub.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/taskhub/models/: agent.py  discussion.py  domain.py  hunter.py  knowledge.py  report.py  task.py
src/taskhub/sdk/: outline_client.py
src/taskhub/services/: __init__.py  discussion_service.py  domain_service.py  hunter_service.py  knowledge_service.py  llm_service.py  report_service.py  system_service.py  task_escalation_service.py  task_service.py
src/taskhub/storage/: json_store.py  sqlite_store.py
src/taskhub/tools/: __init__.py  discussion_tools.py  hunter_tools.py  (+4 more)
src/templates/: admin.html  dashboard.html
src/tools/: taskhub.py
src/utils/: config.py  id_generator.py
templates/: admin.html
tests/: test_hunter_tools.py  test_knowledge_domain.py  test_knowledge_tools.py  test_task_tools.py  test_taskhub.py
(+8 files in other folders)
