[project]
name = "taskhub"
version = "2.0.0"
description = "Taskhub MCP Server - 基于FastMCP的任务管理和代理协调服务器"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.12.2",
    "pydantic>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "uvicorn",
]

[project.scripts]
taskhub = "src.server:main"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
