[project]
name = "taskhub"
version = "2.0.0"
description = "Taskhub MCP Server - 基于FastMCP的任务管理和代理协调服务器"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name="limian1761", email="limian1761@gmail.com" }
]
dependencies = [
    "mcp[cli]>=1.12.2",
    "pydantic>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]

[project.urls]
"Homepage" = "https://github.com/your-repo/Taskhub"
"Bug Tracker" = "https://github.com/your-repo/Taskhub/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pyright",
    "ruff",
    "uvicorn",
]

[project.scripts]
taskhub = "taskhub.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/taskhub"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.pyright]
include = ["src/taskhub", "tests"]
venvPath = "."
venv = ".venv"
strict = ["src/taskhub/**/*.py"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["C4", "E", "F", "I", "PERF", "UP"]
ignore = ["PERF203"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]